deploy/observability/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    grafana: deployment-validation-operator
  name: deployment-validation-operator-grafana
spec:
  ports:
  - name: https
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    grafana: deployment-validation-operator
