deploy/observability/grafana-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    grafana: deployment-validation-operator
  name: grafana
spec:
  port:
    targetPort: https
  to:
    kind: Service
    name: deployment-validation-operator-grafana
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
